--- a/Slurm.html
+++ b/Slurm.html
@@ -3,28 +3,34 @@
 
     <head>
         <title>Order Slurm!</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     </head>
 
     <body>
-        <div class="Jumbotron">
-            <img src="https://uploads-ssl.webflow.com/6057dac172a8dc510667aaf2/60612f649a7d3d57fdfec431_SlurmWebElements.png" width=100%>
-        <div>
-            <div>
-                <img src="https://uploads-ssl.webflow.com/6057dac172a8dc510667aaf2/606209429e69318abeefce3a_Slurm_Wormulon.jpeg" width=100%>
-                <p>Drink Slurm! Hey, I’m Slurm MacKenzie and I want you to be one of the first humans to try Slurm. We’ve heard your cries and complaints, so the Wormulon Queen and the Grunka Lunkas are on our way to Earth to drop off our new Slurm for you to get addicted to! Fill out our form below and be the first to enjoy Slurm! </p>
-           </div>
-
-          <br>
-
-            <div>
-                <p> Slurm is created on the planet Wormulon by the highly motivated Grunka Lunkas. We spend our time making sure each and every can of slurm is better than the last. One-of-a-kind flavor, and the best ingredients to ensure that you and your friends become addicted to our product. We want you to enjoy Slurm just as much as we do.</p>
-                <img src="https://uploads-ssl.webflow.com/6057dac172a8dc510667aaf2/6057f4ff87496c2addeeafe7_SlurmPromotionPic.jpg" width=100%>
+            <div class="Container">
+                <div class="Row">
+                    <ing class="col-nd-6" src="https://uploads-ssl.webflow.com/6057dac172a8dc510667aaf2/60612f649a7d3d57fdfec431_SlurmWebElements.png" width=100%>
+                        <img src="https://uploads-ssl.webflow.com/6057dac172a8dc510667aaf2/606209429e69318abeefce3a_Slurm_Wormulon.jpeg" width=100%>
+                            <p class="col-nd-6"> Drink Slurm! Hey, I’m Slurm MacKenzie and I want you to be one of the first humans to try Slurm. We’ve heard your cries and complaints, so the Wormulon Queen and the Grunka Lunkas are on our way to Earth to drop off our new Slurm for you to get addicted to! Fill out our form below and be the first to enjoy Slurm! </p>
+                </div>            
             </div>
-        </div>
+        <br>
+            <div class="Container">
+                <div class="Row">
+                        <img src="https://uploads-ssl.webflow.com/6057dac172a8dc510667aaf2/6057f4ff87496c2addeeafe7_SlurmPromotionPic.jpg" width=100%>
+                            <p class="col-nd-6"> Slurm is created on the planet Wormulon by the highly motivated Grunka Lunkas. We spend our time making sure each and every can of slurm is better than the last. One-of-a-kind flavor, and the best ingredients to ensure that you and your friends become addicted to our product. We want you to enjoy Slurm just as much as we do.</p>
+                </div>
+            </div>
+
+            <img src= https://uploads-ssl.webflow.com/6057dac172a8dc510667aaf2/606209422ea1bd5065831c97_Slurm_Factory.png width=100%>
 
      <h2> Order Now</h2>
 
-     <form>
+     <div class=form>
          <p> First Name</p>
          <input type="text" name="First Name">
 
@@ -43,6 +49,11 @@
          <p>Zip Code</p>
          <input type="text" name="Last Name">
      </form>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
     </body>
 
